# CMake_Test_Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  foo.cpp  foo.h
test/: CMakeLists.txt  templateUnit.cpp
